--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Secure Notes</title>
     <link href="master.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="assets/web-logo.png"/>
 </head>
 <body>
 <div id="header">
     <img src="assets/web-logo.png" id="logo">
     <a id="title" href="#">Secure Notes</a>
 </div>
+
 
 <div id="menu">
     <a class="link" href="https://github.com/ikoursh/noteApp" target="_blank">GitHub</a>
