--- a/video/index.html
+++ b/video/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Promo Video</title>
     <link href="../master.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="../assets/web-logo.png"/>
 </head>
 <body>
 
