added mobile detection

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <title>Secure Notes</title>
     <link href="master.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="assets/web-logo.png"/>
+
+    <script src="mobileDetection.js"></script>
+
+
 </head>
 <body>
+<img id="background" src="assets/web-background.png">
+
+
 <div id="header">
     <img src="assets/web-logo.png" id="logo">
     <a id="title" href="#">Secure Notes</a>
@@ -16,9 +23,9 @@
 <div id="menu">
     <a class="link" href="https://github.com/ikoursh/noteApp" target="_blank">GitHub</a>
     <a class="link" href="video">Promo Video</a>
-    <a class="link" href="https://play.google.com/store/apps/details?id=com.koursh.inbar.notes" target="_blank">Play Store</a>
+    <a class="link" href="https://play.google.com/store/apps/details?id=com.koursh.inbar.notes" target="_blank">Play
+        Store</a>
 
 </div>
-<img id="background" src="assets/web-background.png">
 </body>
 </html>
