--- a/video/index.html
+++ b/video/index.html
@@ -5,6 +5,8 @@
     <title>Promo Video</title>
     <link href="../master.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../assets/web-logo.png"/>
+    <script src="../mobileDetection.js"></script>
+
 </head>
 <body>
 
