update store link
Fixed play store link to redirect to the explanation in master

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="menu">
     <a class="link" href="https://github.com/ikoursh/noteApp" target="_blank">GitHub</a>
     <a class="link" href="video">Promo Video</a>
-    <a class="link" href="https://play.google.com/store/apps/details?id=com.koursh.inbar.notes" target="_blank">Play
+    <a class="link" href="https://github.com/ikoursh/noteApp/blob/master/README.md#joining-google-play-beta" target="_blank">Play
         Store</a>
 
 </div>
